fix paginate not centered

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -37,10 +37,12 @@ $navbar: black;
 
 .jumbotron h1, h2{
   font-weight: bold;
+  text-align: center;
 }
 
 .btn-xlarge{
   background-color: teal;
+
 }
 
 
@@ -110,7 +112,7 @@ $navbar: black;
   margin-bottom: 10px;;
 }
 
-.center{
+.paginate_center{
   margin:0;
   display: flex;
   align-items: center;
